--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fleek",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "Unifying library for the fleek framework",
-  "main": "lib/fleek.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha ./tests --recursive"
   },
@@ -17,18 +17,11 @@
   ],
   "author": "John Hofrichter",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fleekjs/fleek/issues"
-  },
   "homepage": "https://github.com/fleekjs/fleek#readme",
   "dependencies": {
-    "assert": "^1.3.0",
-    "co": "^4.6.0",
-    "express": "^4.13.4",
-    "fleek-parser": "^1.2.0",
-    "koa": "^1.2.0",
-    "lodash": "^4.11.1",
-    "routington": "^1.0.3"
+    "fleek-context": "^1.0.4",
+    "fleek-router": "^2.0.0",
+    "fleek-validator": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
